[metadata]
description-file=README.rst

[bdist_wheel]
universal=1

# Babel configuration
[extract_messages]
mapping_file = i18n/babel.cfg
keywords = _ _n
output_file = i18n/messages.pot

[init_catalog]
input_file = i18n/messages.pot
output_dir = i18n

[update_catalog]
input_file = i18n/messages.pot
output_dir = i18n

[compile_catalog]
directory = i18n

[compile_json]
directory = i18n
